# Arduino-Car

./: readme.md
CameraLineDetection/: .gitignore  CMakeLists.txt
CameraLineDetection/src/: main.cpp
CarCoordinator/: CarCoordinator.ino  CarCoordinator_MQTT_Adafruit.txt  CarCoordinator_MQTT_PubSubClient.txt
CarCoordinator/lib/: I2cCustomLib.cpp  MqttCustomLib.h  port.h
CarCoordinatorLib/: ArduinoMessageBuffer.cpp  ArduinoMessageBuffer.h  CarCoordinatorLib.ino  MessageBuffer.c  MessageBuffer.h
CarCoordinatorLib/copies/: CarCoordinatorLib copy.ino  MqttCustomLib copy.cpp  MqttCustomLib copy.hpp
I2cLibTester/: I2cCustomLib.cpp  I2cLibTester.ino  MiddlewareTypes.h  port.h
I2cLineFollower/: I2cLineFollower.ino
LineFollower/: DistanceSensor.c  LineDetector.c  LineFollower.c  LineFollower.ino  MotorDriver.c  MotorDriver.cpp  MotorDriver.h
LineFollowerLib/: DistanceSensor.c  DistanceSensor.h  LineDetector.h  LineFollower.h  LineFollowerLib.ino  MotorDriver.h
playground/: MQTTConnector.cpp  MQTTConnector.h  WiFiConnector.cpp  WiFiConnector.h  playground.ino
wirings/: arduino car.fzz
